[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/Beholder/scripts/BeholderTab.gd" type="Script" id=1]
[ext_resource path="res://addons/Beholder/scenes/AddTaskForm.tscn" type="PackedScene" id=2]

[node name="BeholderTab" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
size_flags_horizontal = 3

[node name="AddTaskContainer" type="CenterContainer" parent="UIContainer"]
margin_right = 1010.0
margin_bottom = 20.0

[node name="AddTaskButton" type="Button" parent="UIContainer/AddTaskContainer"]
margin_left = 470.0
margin_right = 539.0
margin_bottom = 20.0
text = "Add Task"

[node name="TaskContainer" type="VBoxContainer" parent="UIContainer"]
margin_top = 24.0
margin_right = 1010.0
margin_bottom = 25.0

[node name="AddTaskForm" parent="UIContainer/TaskContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1010.0
margin_bottom = 1.0
[connection signal="button_up" from="UIContainer/AddTaskContainer/AddTaskButton" to="." method="_on_add_task_button_up"]
